Configured jest and added snapshot tests

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Kubernetes cluster metrics visualizer",
   "main": "src/main.js",
   "scripts": {
-    "prod": "cross-env NODE_ENV=production webpack --mode production --config webpack.build.config.js && electron --noDevServer .",
-    "start": "cross-env NODE_ENV=development webpack serve --hot --host 0.0.0.0 --config webpack.dev.config.js --mode development",
     "build": "cross-env NODE_ENV=production webpack --config webpack.build.config.js --mode production",
     "package": "npm run build",
-    "postpackage": "electron-packager ./ --all --asar --icon=KUBESCRAPE.icns --out=./builds"
+    "postpackage": "electron-packager ./ --all --asar --icon=KUBESCRAPE.icns --out=./builds",
+    "prod": "cross-env NODE_ENV=production webpack --mode production --config webpack.build.config.js && electron --noDevServer .",
+    "start": "cross-env NODE_ENV=development webpack serve --hot --host 0.0.0.0 --config webpack.dev.config.js --mode development",
+    "test": "NODE_ENV=test jest --config ./jest.config.json",
+    "test:watch": "NODE_ENV=test npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,7 @@
     "chart.js": "^3.6.0",
     "electron": "^15.2.0",
     "electron-squirrel-startup": "^1.0.0",
+    "msw": "^0.36.3",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
@@ -45,8 +48,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@babel/plugin-syntax-jsx": "^7.16.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@playwright/test": "^1.17.1",
+    "@react-mock/state": "^0.1.8",
+    "@reduxjs/toolkit": "^1.7.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "babel-jest": "^27.4.4",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
@@ -63,7 +74,11 @@
     "eslint-plugin-react": "^7.21.5",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.4.5",
+    "jest-playwright-preset": "^1.7.0",
+    "jest-svg-transformer": "^1.0.0",
     "mini-css-extract-plugin": "^2.2.0",
+    "playwright": "^1.17.1",
     "redux-devtools-extension": "^2.13.9",
     "style-loader": "^3.3.1",
     "webpack": "^5.49.0",
