--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.5",
+    "axios": "^0.24.0",
     "chart.js": "^3.6.0",
     "electron": "^15.2.0",
     "electron-squirrel-startup": "^1.0.0",
